site/deploy/site/site-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: project-starter
  labels:
    app: site
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: site
